@startuml Gerenciamento de Exames Medicos

    class Agenda{
        - hora : String
        - sala : Sala
        - exame : Exames
        - medico : Medico
        + construtor(hora, sala, exame, medico)
        + getHora()
        + setHora(hora)
        + getSala()
        + setSala(sala)
        + getExame()
        + setExame(exame)
        + getMedico()
        + setMedico(medico)
        + verificarHorario(hora, sala)
        + agendarExame(exame, medico, hora, sala)
    }

    class Paciente{
        - nome : String
        - idade : Integer
        + construtor(nome, idade)
        + getNome()
        + setNome(nome)
        + getIdade()
        + setIdade(idade)
    }

    class CadastroPaciente{
        - cpf : Integer
        - endereco : Endereco
        - telefone : Telefone
        - paciente : Paciente
        + construtor(cpf, endereco, telefone, paciente)
        + getCPF()
        + getEndereco()
        + getTelefone()
        + getPaciente()
        + setCPF(cpf)
        + setEndereco(endereco)
        + setTelefone(telefone)
        + setPaciente(paciente)
        + cadastroNaoVerificado()
        + verificaCadastro(paciente, cpf, endereco, telefone)
    }

    class Medico{
        - nome : String
        - CRM : Integer
        - paciente : Paciente
        + construtor(nome, crm, paciente)
        + getNome()
        + getCRM()
        + getPaciente()
        + setNome(nome)
        + setCRM(crm)
        + setPaciente(paciente)
    }

    class Exames{
        - nome : String
        - tipoExame : String
        + construtor(nome, tipoExame)
        + getNome()
        + setNome(nome)
        + getTipoExame()
        + setTipoExame(exame)
    }

    class Especialidade{
        - nome : String
        - medico : Medico
        + construtor(nome, medico)
        + getNome()
        + getMedico()
        + setNome(especialidade)
        + setMedico(medico)
    }

    class Clinica{
        - nome : String
        - endereco : Endereco
        - telefone : Telefone
        + construtor(nome, endereco, telefone)
        + getNome()
        + getEndereco()
        + getTelefone()
        + setNome(nomeClinica)
        + setEndereco(endereco)
        + setTelefone(telefone)
    }

    class Sala{
        - numeroSala : Integer
        - andar : Integer
        - clinica : Clinica
        + construtor(numeroSala, andar, clinica)
        + getNumeroSala()
        + getAndar()
        + getClinica()
        + setNumeroSala(numeroSala)
        + setAndar(andar)
        + setClinica(clinica)
    }

    class Endereco{
        - nomeRua : String
        - numero : Integer
        - bairro : String
        - cidade : String
        + construtor(nomeRua, numero, bairro, cidade)
        + getNomeRua()
        + getNumero()
        + getBairro()
        + getCidade()
        + setNomeRua(nomeRua)
        + setNumero(numero)
        + setBairro(bairro)
        + setCidade(cidade)
    }

    class Telefone{
        - ddd : Integer
        - numero : Integer
        + construtor(ddd, numero)
        + getDDD()
        + setDDD(ddd)
        + getNumero()
        + setNumero(numero)
    }

    Paciente <|--> CadastroPaciente
    Paciente <|--> Medico
    Medico *--> Especialidade
    Exames *--> Agenda
    Sala *--> Agenda
    Agenda <--* Especialidade
    Clinica *--> Sala
    Clinica <--* Endereco
    CadastroPaciente <--* Endereco
    Telefone *--> Clinica
    Telefone *--> CadastroPaciente

@enduml